src/Ebikes/mdapioutput/objects/Order_Item__c.object
<CustomObject>
    <label>Order Item</label>
    <nameField>
        <displayFormat>OI-{000000}</displayFormat>
        <label>Order Item Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <fields>
        <fullName>Order__c</fullName>
        <label>Reseller Order</label>
        <referenceTo>Order__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Product</label>
        <referenceTo>Product__c</referenceTo>
        <relationshipLabel>Order Items</relationshipLabel>
        <relationshipName>Order_Items</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Qty_L__c</fullName>
        <defaultValue>1</defaultValue>
        <label>L</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_M__c</fullName>
        <defaultValue>1</defaultValue>
        <label>M</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Qty_S__c</fullName>
        <defaultValue>1</defaultValue>
        <label>S</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
</CustomObject>